[package]
name = "cipherstream"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.55.0", features = [
    "tokio", 
    "gossipsub", 
    "mdns", 
    "kad", 
    "identify", 
    "ping", 
    "noise", 
    "tcp", 
    "yamux", 
    "quic", 
    "macros", 
    "dns",
    "request-response",
    "relay",
    "tls"
]}
tokio = { version = "1", features = ["full"] }
futures = "0.3" # Required by libp2p examples and useful for async
env_logger = "0.11" # For logging
log = "0.4" # Logging facade
serde = { version = "1.0", features = ["derive"] } # For serialization
serde_json = "1.0" # For JSON serialization (e.g., messages)
thiserror = "1.0" # For easier error handling
anyhow = "1.0" # Flexible error handling
rand = "0.8.5" # For generating PeerIds etc.
base64 = "0.21" # For encoding/decoding keys or IDs if needed
clap = { version = "4.5", features = ["derive"] } # Command-line argument parsing
ring = "0.16"
hex = "0.4"
indicatif = "0.17"
async-std = "1.12"
uuid = { version = "1.16.0", features = ["v4"] }
once_cell = "1.19.0"
async-trait = "0.1.88"
bincode = "2.0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3.10.1"
